[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/coin.gd" type="Script" id=1]
[ext_resource path="res://assets/coin.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.7496, 21.5846 )

[node name="coin" type="RigidBody2D" groups=[
"coins",
]]
show_behind_parent = true
gravity_scale = 10.0
contacts_reported = 400
contact_monitor = true
angular_damp = 128.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.71712, 0.214634 )
shape = SubResource( 1 )

[node name="collision_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="timeout" from="collision_timer" to="." method="_on_collision_timer_timeout"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_collision_timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
